WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27047
Sometimes the media controller remaining time disappear.
https://bugs.webkit.org/show_bug.cgi?id=27047
Summary
Sometimes the media controller remaining time disappear.
Pierre d'Herbemont
Reported
2009-07-07 16:12:51 PDT
Sometimes the media controller remaining time disappear. - Go to
http://iphone.akamai.com
- Click and load a video - Load an other video -> Remaining and Elapsed time text field are gone <
rdar://problem/7036201
>
Attachments
patch v1.
(17.77 KB, patch)
2009-07-07 18:02 PDT
,
Pierre d'Herbemont
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pierre d'Herbemont
Comment 1
2009-07-07 18:02:34 PDT
Created
attachment 32407
[details]
patch v1.
Simon Fraser (smfr)
Comment 2
2009-07-07 18:13:35 PDT
Comment on
attachment 32407
[details]
patch v1.
> +2009-07-07 Pierre d'Herbemont <
pdherbemont@apple.com
> > + > + (WebCore::MediaControlElement::styleForElement): Shortcut.
Utility method, or "code factoring" would be a better description.
> diff --git a/WebCore/rendering/MediaControlElements.cpp b/WebCore/rendering/MediaControlElements.cpp
> + return NULL;
WebCore code uses 0 instead of NULL.
Pierre d'Herbemont
Comment 3
2009-07-07 18:28:11 PDT
http://trac.webkit.org/changeset/45614
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug